--- a/api_functions.ipynb
+++ b/api_functions.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "Index(['genres', 'year', 'playtime_forever'], dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        " 'Total de Horas Jugadas': 18096708.533333335}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "Index(['genres', 'user_id', 'playtime_forever'], dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        " 'Total de Horas Jugadas': 29704.216666666667}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "Index(['genres', 'playtime_forever', 'ranking'], dtype='object')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "0  Adventure                        1.680433e+07"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
        "       1635                    324  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
        "  {'app_name': 'PAYDAY 2', 'num_reviews_positivas': 324}]}"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
        "       259  2015.0    Bohemia Interactive                     60"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
        "  {'developer': 'Bohemia Interactive', 'num_reviews_negativas': 60}]}"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +922,7 @@
        "[10931 rows x 3 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,32 +934,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def developer( nombre_desarrollador):\n",
-    "    \n",
-    "    # Filtrar el DataFrame por el nombre del desarrollador\n",
-    "    desarrollador_filtrado = df_developer[df_developer['developer'] == nombre_desarrollador]\n",
-    "    \n",
-    "    # Obtener la cantidad de juegos del desarrollador filtrado\n",
-    "    cantidad_juegos = desarrollador_filtrado['Cantidad de Juegos por Developer'].iloc[0]\n",
-    "    \n",
-    "    # Obtener el porcentaje de juegos gratuitos del desarrollador filtrado\n",
-    "    porcentaje_free = desarrollador_filtrado['Porcentaje de Juegos Gratuitos'].iloc[0]\n",
-    "    \n",
-    "    resultado = {\n",
-    "        'Nombre del desarrollador': nombre_desarrollador,\n",
-    "        'Cantidad de juegos desarrollados: ' : cantidad_juegos,\n",
-    "        'Porcentaje de ellos free: ' : porcentaje_free\n",
-    "    }\n",
-    "    return resultado\n"
+    "def developer(nombre_desarrollador):\n",
+    "    try:\n",
+    "        # Filtrar el DataFrame por el nombre del desarrollador\n",
+    "        desarrollador_filtrado = df_developer[df_developer['developer'] == nombre_desarrollador]\n",
+    "        \n",
+    "        if desarrollador_filtrado.empty:\n",
+    "            return {\"error\": \"No se encontró ningún desarrollador con ese nombre.\"}\n",
+    "        \n",
+    "        # Obtener la cantidad de juegos del desarrollador filtrado\n",
+    "        cantidad_juegos = desarrollador_filtrado['Cantidad de Juegos por Developer'].iloc[0]\n",
+    "        \n",
+    "        # Obtener el porcentaje de juegos gratuitos del desarrollador filtrado\n",
+    "        porcentaje_free = desarrollador_filtrado['Porcentaje de Juegos Gratuitos'].iloc[0]\n",
+    "        \n",
+    "        resultado = {\n",
+    "            'Nombre del desarrollador': nombre_desarrollador,\n",
+    "            'Cantidad de juegos desarrollados: ': cantidad_juegos,\n",
+    "            'Porcentaje de ellos free: ': porcentaje_free\n",
+    "        }\n",
+    "        return resultado\n",
+    "    except Exception as e:\n",
+    "        return {\"error\": str(e)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +975,7 @@
        " 'Porcentaje de ellos free: ': 0.0}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1136,7 @@
        "[2090 rows x 4 columns]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1143,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1179,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1198,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1215,7 @@
        " 'tiene de reseñas Positivas': 3373}"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1389,7 @@
        "[57397 rows x 5 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1396,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1425,7 +1430,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('O')"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_userdata['user_id'].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1462,7 @@
        " 'y compro en total:': 9}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1455,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1634,7 +1659,7 @@
        "       1240  2015.0     Facepunch Studios                    464"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1646,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1671,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1684,7 +1709,7 @@
        "  {'developer': 'Tripwire Interactive', 'num_reviews_positivas': 3}]}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
