--- a/api_functions.ipynb
+++ b/api_functions.ipynb
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +922,7 @@
        "[10931 rows x 3 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,37 +934,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def developer(nombre_desarrollador):\n",
+    "def Developer(nombre_desarrollador):\n",
+    "    \"\"\"\n",
+    "    ingresa numbre de desarrollador\n",
+    "    devuelve: Cantidad de items y porcentaje de contenido Free según empresa desarrolladora\n",
+    "    \"\"\"\n",
     "    try:\n",
     "        # Filtrar el DataFrame por el nombre del desarrollador\n",
-    "        desarrollador_filtrado = df_developer[df_developer['developer'] == nombre_desarrollador]\n",
+    "        desarrollador_filtrado = df_developer[df_developer[\"developer\"] == nombre_desarrollador]\n",
     "        \n",
     "        if desarrollador_filtrado.empty:\n",
     "            return {\"error\": \"No se encontró ningún desarrollador con ese nombre.\"}\n",
     "        \n",
     "        # Obtener la cantidad de juegos del desarrollador filtrado\n",
-    "        cantidad_juegos = desarrollador_filtrado['Cantidad de Juegos por Developer'].iloc[0]\n",
+    "        cantidad_juegos = desarrollador_filtrado[\"Cantidad de Juegos por Developer\"].iloc[0]\n",
     "        \n",
     "        # Obtener el porcentaje de juegos gratuitos del desarrollador filtrado\n",
-    "        porcentaje_free = desarrollador_filtrado['Porcentaje de Juegos Gratuitos'].iloc[0]\n",
+    "        porcentaje_free = desarrollador_filtrado[\"Porcentaje de Juegos Gratuitos\"].iloc[0]\n",
     "        \n",
     "        resultado = {\n",
-    "            'Nombre del desarrollador': nombre_desarrollador,\n",
-    "            'Cantidad de juegos desarrollados: ': cantidad_juegos,\n",
-    "            'Porcentaje de ellos free: ': porcentaje_free\n",
+    "            \"Nombre del desarrollador\": nombre_desarrollador,\n",
+    "            \"Cantidad de juegos desarrollados: \" : cantidad_juegos,\n",
+    "            \"Porcentaje de ellos free: \": porcentaje_free\n",
     "        }\n",
     "        return resultado\n",
     "    except Exception as e:\n",
-    "        return {\"error\": str(e)}"
+    "        return {\"error\": str(e)}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +979,7 @@
        " 'Porcentaje de ellos free: ': 0.0}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1426,26 +1430,6 @@
     "    }\n",
     "    \n",
     "    return resultados"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('O')"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_userdata['user_id'].dtype"
    ]
   },
   {
