--- a/api_functions.ipynb
+++ b/api_functions.ipynb
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +922,7 @@
        "[10931 rows x 3 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,20 +955,19 @@
     "        \n",
     "        # Obtener el porcentaje de juegos gratuitos del desarrollador filtrado\n",
     "        porcentaje_free = desarrollador_filtrado[\"Porcentaje de Juegos Gratuitos\"].iloc[0]\n",
-    "        \n",
-    "        resultado = {\n",
-    "            \"Nombre del desarrollador\": nombre_desarrollador,\n",
-    "            \"Cantidad de juegos desarrollados: \" : cantidad_juegos,\n",
-    "            \"Porcentaje de ellos free: \": porcentaje_free\n",
-    "        }\n",
-    "        return resultado\n",
+    "       \n",
+    "        return {\n",
+    "                \"Nombre del desarrollador\": nombre_desarrollador,\n",
+    "                \"Cantidad de juegos desarrollados: \" : cantidad_juegos,\n",
+    "                \"Porcentaje de ellos free: \": porcentaje_free\n",
+    "                }\n",
     "    except Exception as e:\n",
     "        return {\"error\": str(e)}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -979,13 +978,13 @@
        " 'Porcentaje de ellos free: ': 0.0}"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "developer('07th Expansion')"
+    "Developer('07th Expansion')"
    ]
   },
   {
