--- a/api_functions.ipynb
+++ b/api_functions.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,31 +938,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Developer(nombre_desarrollador):\n",
+    "def developer(nombre_desarrollador):\n",
     "    \"\"\"\n",
-    "    ingresa numbre de desarrollador\n",
-    "    devuelve: Cantidad de items y porcentaje de contenido Free según empresa desarrolladora\n",
+    "    Función que devuelve un diccionario con información sobre un desarrollador específico.\n",
     "    \"\"\"\n",
-    "    try:\n",
-    "        # Filtrar el DataFrame por el nombre del desarrollador\n",
-    "        desarrollador_filtrado = df_developer[df_developer[\"developer\"] == nombre_desarrollador]\n",
-    "        \n",
-    "        if desarrollador_filtrado.empty:\n",
-    "            return {\"error\": \"No se encontró ningún desarrollador con ese nombre.\"}\n",
-    "        \n",
-    "        # Obtener la cantidad de juegos del desarrollador filtrado\n",
-    "        cantidad_juegos = desarrollador_filtrado[\"Cantidad de Juegos por Developer\"].iloc[0]\n",
-    "        \n",
-    "        # Obtener el porcentaje de juegos gratuitos del desarrollador filtrado\n",
-    "        porcentaje_free = desarrollador_filtrado[\"Porcentaje de Juegos Gratuitos\"].iloc[0]\n",
-    "       \n",
-    "        return {\n",
-    "                \"Nombre del desarrollador\": nombre_desarrollador,\n",
-    "                \"Cantidad de juegos desarrollados: \" : cantidad_juegos,\n",
-    "                \"Porcentaje de ellos free: \": porcentaje_free\n",
-    "                }\n",
-    "    except Exception as e:\n",
-    "        return {\"error\": str(e)}\n"
+    "    # Filtrar el DataFrame por el nombre del desarrollador\n",
+    "    desarrollador_filtrado = df_developer[df_developer['developer'] == nombre_desarrollador]\n",
+    "    \n",
+    "    # Obtener la cantidad de juegos del desarrollador filtrado\n",
+    "    cantidad_juegos = desarrollador_filtrado['Cantidad de Juegos por Developer'].values\n",
+    "    if cantidad_juegos:\n",
+    "        cantidad_juegos = cantidad_juegos[0]\n",
+    "    else:\n",
+    "        cantidad_juegos = \"No hay información disponible\"\n",
+    "    \n",
+    "    # Obtener el porcentaje de juegos gratuitos del desarrollador filtrado\n",
+    "    porcentaje_free = desarrollador_filtrado['Porcentaje de Juegos Gratuitos'].values\n",
+    "    if len(porcentaje_free) > 0:\n",
+    "        porcentaje_free = porcentaje_free[0]\n",
+    "    else:\n",
+    "        porcentaje_free = \"No hay juegos gratuitos\"\n",
+    "    \n",
+    "    resultado = {\n",
+    "        'Nombre del desarrollador': nombre_desarrollador,\n",
+    "        'Cantidad de juegos desarrollados': cantidad_juegos,\n",
+    "        'Porcentaje de juegos gratuitos': porcentaje_free\n",
+    "    }\n",
+    "    return resultado\n"
    ]
   },
   {
@@ -1237,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1394,7 @@
        "[57397 rows x 5 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1404,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1433,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1445,7 +1447,7 @@
        " 'y compro en total:': 9}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
