--- a/api_functions.ipynb
+++ b/api_functions.ipynb
@@ -938,33 +938,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def developer(nombre_desarrollador):\n",
+    "def Developer(nombre_desarrollador):\n",
     "    \"\"\"\n",
-    "    Función que devuelve un diccionario con información sobre un desarrollador específico.\n",
+    "    ingresa numbre de desarrollador\n",
+    "    devuelve: Cantidad de items y porcentaje de contenido Free según empresa desarrolladora\n",
     "    \"\"\"\n",
-    "    # Filtrar el DataFrame por el nombre del desarrollador\n",
-    "    desarrollador_filtrado = df_developer[df_developer['developer'] == nombre_desarrollador]\n",
+    "    try:\n",
+    "        # Filtrar el DataFrame por el nombre del desarrollador\n",
+    "        desarrollador_filtrado = df_developer[df_developer[\"developer\"] == str(nombre_desarrollador)]\n",
+    "        \n",
+    "        if desarrollador_filtrado.empty:\n",
+    "            return {\"error\": \"No se encontró ningún desarrollador con ese nombre.\"}\n",
+    "        \n",
+    "        # Obtener la cantidad de juegos del desarrollador filtrado\n",
+    "        cantidad_juegos = desarrollador_filtrado[\"Cantidad de Juegos por Developer\"].iloc[0]\n",
+    "        \n",
+    "        # Obtener el porcentaje de juegos gratuitos del desarrollador filtrado\n",
+    "        porcentaje_free = desarrollador_filtrado[\"Porcentaje de Juegos Gratuitos\"].iloc[0]\n",
+    "        \n",
+    "        resultado = {\n",
+    "                \"Nombre del desarrollador\": nombre_desarrollador,\n",
+    "                \"Cantidad de juegos desarrollados: \" : cantidad_juegos,\n",
+    "                \"Porcentaje de ellos free: \": porcentaje_free\n",
+    "                    }\n",
+    "\n",
+    "        return resultado.to_dict()\n",
     "    \n",
-    "    # Obtener la cantidad de juegos del desarrollador filtrado\n",
-    "    cantidad_juegos = desarrollador_filtrado['Cantidad de Juegos por Developer'].values\n",
-    "    if cantidad_juegos:\n",
-    "        cantidad_juegos = cantidad_juegos[0]\n",
-    "    else:\n",
-    "        cantidad_juegos = \"No hay información disponible\"\n",
-    "    \n",
-    "    # Obtener el porcentaje de juegos gratuitos del desarrollador filtrado\n",
-    "    porcentaje_free = desarrollador_filtrado['Porcentaje de Juegos Gratuitos'].values\n",
-    "    if len(porcentaje_free) > 0:\n",
-    "        porcentaje_free = porcentaje_free[0]\n",
-    "    else:\n",
-    "        porcentaje_free = \"No hay juegos gratuitos\"\n",
-    "    \n",
-    "    resultado = {\n",
-    "        'Nombre del desarrollador': nombre_desarrollador,\n",
-    "        'Cantidad de juegos desarrollados': cantidad_juegos,\n",
-    "        'Porcentaje de juegos gratuitos': porcentaje_free\n",
-    "    }\n",
-    "    return resultado\n"
+    "    except Exception as e:\n",
+    "        return {\"error\": str(e)}"
    ]
   },
   {
@@ -986,7 +987,7 @@
     }
    ],
    "source": [
-    "Developer('07th Expansion')"
+    "developer('07th Expansion')"
    ]
   },
   {
