--- a/api_functions.ipynb
+++ b/api_functions.ipynb
@@ -959,10 +959,10 @@
     "        resultado = {\n",
     "                \"Nombre del desarrollador\": nombre_desarrollador,\n",
     "                \"Cantidad de juegos desarrollados: \" : cantidad_juegos,\n",
-    "                \"Porcentaje de ellos free: \": porcentaje_free\n",
+    "                \"Porcentaje de ellos free: \": int(porcentaje_free)\n",
     "                    }\n",
     "\n",
-    "        return resultado.to_dict()\n",
+    "        return resultado\n",
     "    \n",
     "    except Exception as e:\n",
     "        return {\"error\": str(e)}"
